original functionality still working, working on letting users input custom sql

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,14 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Index</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <title>Gene Explorer</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
-  <h1 style="color: blue">Index</h1>
-  <p>This is an HTML file served up by Flask</p>
+  <div class="container">
+  <h1>Gene Explorer</h1>
+  <p>With this tool you can explore much RNA seq and other data. 
+    <a href="/mine">Here</a> you can select select which data and datasets you would like to view
+    and can add your own SQL. <a href="/database_info">Here</a> you can find info about all the tables in 
+    the database including row and table names to help you construct your own queries. If you would
+    like to make your own queries you can do so <a href="/sql">here.</a>
+  </p>
+</div>
 </body>
 
 </html>
