entering no genes now gives you all genes

--- a/src/templates/mine.html
+++ b/src/templates/mine.html
@@ -33,7 +33,7 @@
         <br>
         genes:<br>
         <textarea name="genes"></textarea><br>
-        additional parameters, these will be appended to the end of the sql statement:<br>
+        additional parameters, these will be appended to the end of the sql statement (if you are using a gene list your parameters need to start with 'AND'):<br>
         <textarea name="additional_params"></textarea><br>
         <input type="submit" value="Submit"><br>
     </form>
