--- a/src/templates/mine.html
+++ b/src/templates/mine.html
@@ -11,18 +11,20 @@
 
 <body>
   <div class="container">
-    <form method="POST">
+    <form method="POST" class="form-group">
         <h3>What form do you want your results?</h3>
         <select name="download_type">
           <option value="html">HTML</option>
           <option value="tsv"> TSV </option>
         </select>
         <h3>Dataset:</h3>
+        <div class="form-check-inline">
         <input type="checkbox" name="dataset" value=tph1p_v_N2> <i>tph-1p::xbp-1</i> </input>
         <input type="checkbox" name="dataset" value=dat1p_v_N2> <i>dat-1p::xbp-1</i> </input>
         <input type="checkbox" name="dataset" value=dat1p_tph1p_v_N2> <i>dat-1p::xbp-1 and tph1P::xbp-1</i> </input>
         <input type="checkbox" name="dataset" value=rab3p_v_N2> <i>rab-3p::xbp-1</i></input>
         <input type="checkbox" name="larryDataset" value=eps8_RNAi> <i>eps-8</i> RNAi
+        </div>
         <h3>columns:</h3>
         <input type="checkbox" name="column" value="baseMean"> <label> baseMean </label>
         <input type="checkbox" name="column" value="log2FoldChange"> <label> log2FoldChange </label>
