--- a/src/templates/mine.html
+++ b/src/templates/mine.html
@@ -33,6 +33,11 @@
         <input type="checkbox" name="column" value="pvalue"> <label> pvalue </label>
         <input type="checkbox" name="column" value="padj"> <label> padj </label>
         <br>
+        <h3>would you like to return genes that aren't in all datasets?</h3>
+        <select name="return_missing">
+            <option value="False">no</option>
+            <option value="True">yes</option>
+        </select>
         genes:<br>
         <textarea name="genes"></textarea><br>
         additional parameters, these will be appended to the end of the sql statement (if you are using a gene list your parameters need to start with 'AND'):<br>
