initial implementation of RNAi lookup

--- a/src/templates/mine.html
+++ b/src/templates/mine.html
@@ -21,7 +21,7 @@
         <div class="form-check-inline">
         <input type="checkbox" name="dataset" value=tph1p_v_N2> <i>tph-1p::xbp-1</i> </input>
         <input type="checkbox" name="dataset" value=dat1p_v_N2> <i>dat-1p::xbp-1</i> </input>
-        <input type="checkbox" name="dataset" value=dat1p_tph1p_v_N2> <i>dat-1p::xbp-1 and tph1P::xbp-1</i> </input>
+        <input type="checkbox" name="dataset" value=dat1p_tph1p_v_N2> <i>dat-1p::xbp-1 and tph-1p::xbp-1</i> </input>
         <input type="checkbox" name="dataset" value=rab3p_v_N2> <i>rab-3p::xbp-1</i></input>
         <input type="checkbox" name="larryDataset" value=eps8_RNAi> <i>eps-8</i> RNAi
         </div>
