added support for ahringer by making there be two paths to construct the table and column lists

--- a/src/templates/RNAi.html
+++ b/src/templates/RNAi.html
@@ -8,18 +8,19 @@
           </select>
           <h3>Dataset:</h3>
           <div class="form-check-inline">
-          <input type="checkbox" name="dataset" value="Vidal_RNAi"> <i>tph-1p::xbp-1</i> </input>
+          <input type="checkbox" name="dataset" value="Vidal_RNAi"> <i>Vidal</i> </input>
+          <input type="checkbox" name="dataset" value="Ahringer_RNAi"> <i>Ahringer</i> </input>
+          <input type="hidden" name="RNAi" value="RNAi_screen">
           </div>
           <br>
           <h3>would you like to return genes that aren't in all datasets?</h3>
           <select name="return_missing">
               <option value="True">yes</option>
               <option value="False">no</option>
-          </select>
+          </select><br>
           genes:<br>
           <textarea name="genes"></textarea><br>
           additional parameters, these will be appended to the end of the sql statement (if you are using a gene list your parameters need to start with 'AND'):<br>
-          <textarea name="additional_params"></textarea><br>
           <input type="submit" value="Submit"><br>
       </form>
     </div>
