--- a/src/templates/mine.html
+++ b/src/templates/mine.html
@@ -37,7 +37,7 @@
         <select name="return_missing">
             <option value="False">no</option>
             <option value="True">yes</option>
-        </select>
+        </select><br>
         genes:<br>
         <textarea name="genes"></textarea><br>
         additional parameters, these will be appended to the end of the sql statement (if you are using a gene list your parameters need to start with 'AND'):<br>
