removed link to non existant custom sql page

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,8 +15,7 @@
   <p>With this tool you can explore much RNA seq and other data. 
     <a href="/mine">Here</a> you can select select which data and datasets you would like to view
     and can add your own SQL. <a href="/database_info">Here</a> you can find info about all the tables in 
-    the database including row and table names to help you construct your own queries. If you would
-    like to make your own queries you can do so <a href="/sql">here.</a>
+    the database including row and table names to help you construct your own queries.
   </p>
 </div>
 </body>
