added a link to rnai tool in the index.html

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,7 +15,8 @@
   <p>With this tool you can explore much RNA seq and other data. 
     <a href="/mine">Here</a> you can select select which data and datasets you would like to view
     and can add your own SQL. <a href="/database_info">Here</a> you can find info about all the tables in 
-    the database including row and table names to help you construct your own queries.
+    the database including row and table names to help you construct your own queries. <a href="/rnai">Here</a>
+    you can get RNAi library locations.
   </p>
 </div>
 </body>
