added gene type select to RNAi page

--- a/src/templates/RNAi.html
+++ b/src/templates/RNAi.html
@@ -18,6 +18,12 @@
               <option value="True">yes</option>
               <option value="False">no</option>
           </select><br>
+          what form are your genes in?
+          <select name="gene_type">
+          <option value="WBID">Worm Base ID</option>
+          <option value="Name">Gene Name</option>
+          <option value="Sequence">Sequence</option>
+        </select>
           genes:<br>
           <textarea name="genes"></textarea><br>
           <input type="submit" value="Submit"><br>
