--- a/gene_data_explorer/gene_data_explorer/templates/mine.html
+++ b/gene_data_explorer/gene_data_explorer/templates/mine.html
@@ -19,7 +19,8 @@
     <form method="POST" class="form-group">
         <h3>What form do you want your results?</h3>
         <select name="download_type">
-          <option value="html">HTML</option>
+          <option value="clustergrammer">clustergrammer heatmap</option>
+          <option value="html">HTML table</option>
           <option value="tsv"> TSV </option>
         </select>
         <h3>Dataset:</h3>
