implemented google login, still need to limit which users are authorized

--- a/gene_data_explorer/gene_data_explorer/templates/clustergrammer.html
+++ b/gene_data_explorer/gene_data_explorer/templates/clustergrammer.html
@@ -12,9 +12,9 @@
     <title>Clustergrammer.js</title>
 
     <link rel="stylesheet" href="static/style.css">
-    <link rel="stylesheet" href="static/clustergrammer/lib/css/font-awesome.min.css">
-    <link rel="stylesheet" href="static/clustergrammer/lib/css/bootstrap.css">
-    <link rel="stylesheet" href="static/clustergrammer/css/custom.css">
+    <link rel="stylesheet" href="node_modules/clustergrammer/lib/css/font-awesome.min.css">
+    <link rel="stylesheet" href="node_modules/clustergrammer/lib/css/bootstrap.css">
+    <link rel="stylesheet" href="node_modules/clustergrammer/css/custom.css">
 
 </head>
 
@@ -27,18 +27,24 @@
 
 
   <!-- Required JS Libraries -->
-  <script src="static/clustergrammer/lib/js/d3.js"></script>
-  <script src="static/clustergrammer/lib/js/jquery-1.11.2.min.js"></script>
-  <script src="static/clustergrammer/lib/js/underscore-min.js"></script>
-  <script src="static/clustergrammer/lib/js/bootstrap.min.js"></script>
+ <!--  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.3.1/d3.min.js"></script>
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="node_modules/underscore/underscore-min.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
+
+  <script src="node_modules/clustergrammer/lib/js/d3.js"></script>
+  <script src="node_modules/clustergrammer/lib/js/jquery-1.11.2.min.js"></script>
+  <script src="node_modules/clustergrammer/lib/js/underscore-min.js"></script>
+  <script src="node_modules/clustergrammer/lib/js/bootstrap.min.js"></script>
+
 
   <!-- Clustergrammer JS -->
-  <script src='static/clustergrammer/clustergrammer.js'></script>
+  <script src="node_modules/clustergrammer/clustergrammer.js"></script>
 
   <!-- optional modules -->
-  <script src='static/clustergrammer/js/Enrichrgram.js'></script>
+  <!-- <script src='static/clustergrammer/js/Enrichrgram.js'></script>
   <script src='static/clustergrammer/js/hzome_functions.js'></script>
-  <script src='static/clustergrammer/js/send_to_Enrichr.js'></script>
+  <script src='static/clustergrammer/js/send_to_Enrichr.js'></script> -->
 
   <!-- make clustergram -->
 
