removed unneaded __init__.py updated secret key generation and changed clustergrammer dependencies

--- a/gene_data_explorer/gene_data_explorer/templates/clustergrammer.html
+++ b/gene_data_explorer/gene_data_explorer/templates/clustergrammer.html
@@ -33,7 +33,7 @@
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
 
   <script src="node_modules/clustergrammer/lib/js/d3.js"></script>
-  <script src="node_modules/clustergrammer/lib/js/jquery-1.11.2.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
   <script src="node_modules/clustergrammer/lib/js/underscore-min.js"></script>
   <script src="node_modules/clustergrammer/lib/js/bootstrap.min.js"></script>
 
