--- a/gene_data_explorer/gene_data_explorer/templates/clustergrammer.html
+++ b/gene_data_explorer/gene_data_explorer/templates/clustergrammer.html
@@ -22,8 +22,9 @@
     <div class="container">
 
   <div id='container-id-1'>
-      <h1 class='wait_message'>Please wait ...</h1>
+      
   </div>
+  
 
 
   <!-- Required JS Libraries -->
@@ -53,5 +54,9 @@
     <div class=clustergrammer id="clustergrammerDisplay"></div>
     <script src='static/load_clustergram.js'></script>
     </div>
+    <p>Clustergrammer is a product of the Ma'ayan lab and is licensed under the MIT license.</p>
+  <p>Fernandez, N. F. et al. Clustergrammer, a web-based heatmap visualization and analysis 
+    tool for high-dimensional biological data. Sci. Data 4:170151 doi: 
+    <a href="https://www.nature.com/articles/sdata2017151" target="_blank">10.1038/sdata.2017.151</a> (2017).</p>
     </body>
 </html>
