missing gene names filled in with sequence and added option to get sequence names

--- a/gene_data_explorer/gene_data_explorer/templates/mine.html
+++ b/gene_data_explorer/gene_data_explorer/templates/mine.html
@@ -36,6 +36,7 @@
         <input type="checkbox" name="cco1_jmjd_Dataset" value="jmjd:3.1::jmjd:3.1"> <i>jmjd-3.1::jmjd-3.1</i></input>
         </div>
         <h3>columns:</h3>
+        <input type="checkbox" name="sequence_names" value="True"> <label> sequence name </label>
         <input type="checkbox" name="column" value="baseMean"> <label> baseMean </label>
         <input type="checkbox" name="column" value="log2FoldChange"> <label> log2FoldChange </label>
         <input type="checkbox" name="column" value="lfcSE"> <label> lfcSE </label>
