RNAi selection now works with genenames

--- a/gene_data_explorer/gene_data_explorer/templates/RNAi.html
+++ b/gene_data_explorer/gene_data_explorer/templates/RNAi.html
@@ -11,6 +11,7 @@
           <input type="checkbox" name="dataset" value="Vidal_RNAi"> <i>Vidal</i> </input>
           <input type="checkbox" name="dataset" value="Ahringer_RNAi"> <i>Ahringer</i> </input>
           <input type="hidden" name="RNAi" value="RNAi_screen">
+          <input type="checkbox" name="sequence_names" value="True"> <label> sequence name </label>
           </div>
           <br>
           <h3>would you like to return genes that aren't in all datasets?</h3>
