--- a/gene_data_explorer/gene_data_explorer/templates/mine.html
+++ b/gene_data_explorer/gene_data_explorer/templates/mine.html
@@ -34,6 +34,7 @@
         <input type="checkbox" name="cco1_jmjd_Dataset" value="sur5::jmjd1.2"> <i>sur-5::jmjd-1.2</i></input>
         <input type="checkbox" name="cco1_jmjd_Dataset" value="rgef::jmjd1.2"> <i>rgef-1::jmjd-1.2</i></input>
         <input type="checkbox" name="cco1_jmjd_Dataset" value="jmjd:3.1::jmjd:3.1"> <i>jmjd-3.1::jmjd-3.1</i></input>
+        <input type="checkbox" name="Becca_taylor_dataset" value="Rebecca_Taylor_neuronal_RNAseq_xbp-1"> <i>Becca taylor neuron specific <i>xbp-1s</i> RNAseq</input>
         </div>
         <h3>columns:</h3>
         <input type="checkbox" name="sequence_names" value="True"> <label> sequence name </label>
