--- a/gene_data_explorer/templates/mine.html
+++ b/gene_data_explorer/templates/mine.html
@@ -6,12 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <title>Gene Explorer</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script> 
-  $(document).ready(function(){
-  $('[data-toggle="tooltip"]').tooltip();
-  });
-  </script>
 </head>
 
 <body>
@@ -35,6 +29,8 @@
         <input type="checkbox" name="cco1_jmjd_Dataset" value="rgef::jmjd1.2"> <i>rgef-1::jmjd-1.2</i></input>
         <input type="checkbox" name="cco1_jmjd_Dataset" value="jmjd:3.1::jmjd:3.1"> <i>jmjd-3.1::jmjd-3.1</i></input>
         <input type="checkbox" name="Becca_taylor_dataset" value="Rebecca_Taylor_neuronal_RNAseq_xbp-1"> <i>Becca taylor neuron specific <i>xbp-1s</i> RNAseq</input>
+        <input type="checkbox" name="dataset" value="L4_act2_v_N2_L4"> <i>act-1</i> RNAi L4</input>
+        <input type="checkbox" name="dataset" value="D1_act2_v_N2_D1"> <i>act-1</i> RNAi D1</input>
         </div>
         <h3>columns:</h3>
         <input type="checkbox" name="sequence_names" value="True"> <label> sequence name </label>
