put back accidentily removed button

--- a/gene_data_explorer/templates/mine.html
+++ b/gene_data_explorer/templates/mine.html
@@ -54,6 +54,7 @@
         </select>
         genes:<br>
         <textarea name="genes"></textarea><br>
+        <input type="submit">submit</input>
     </form>
   </div>
 </body>
