--- a/gene_data_explorer/templates/mine.html
+++ b/gene_data_explorer/templates/mine.html
@@ -54,7 +54,7 @@
         </select>
         genes:<br>
         <textarea name="genes"></textarea><br>
-        <input type="hidden" value="">
+        <input type="hidden" name="additional_params" value="">
         <input type="submit">submit</input>
     </form>
   </div>
